scripts/gke/01_back_deployment.yml
# declare back deployment
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: back-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik-gke-demo
      tier: backend
  template:
    metadata:
      labels:
        app: traefik-gke-demo
        tier: backend
    spec:
      containers:
        - name: back
          image: "zenika/traefik-gke-demo-back:1.0.0"
          ports:
            - containerPort: 3000
