scripts/gke/03_front_deployment.yml
# declare front deployment
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: front-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-gke-demo
      tier: frontend
  template:
    metadata:
      labels:
        app: traefik-gke-demo
        tier: frontend
    spec:
      containers:
        - name: front
          image: "zenika/traefik-gke-demo-front:1.0.0"
