scripts/gke/07_traefik_deployment.yml
# declare Traefik deployment
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-deployment
  labels:
    app: traefik-gke-demo
    tier: reverse-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-gke-demo
      tier: reverse-proxy
  template:
    metadata:
      labels:
        app: traefik-gke-demo
        tier: reverse-proxy
    spec:
      serviceAccountName: traefik-service-account
      terminationGracePeriodSeconds: 60
      volumes:
        - name: config
          configMap:
            name: traefik-config
        - name: demo-acme
          gcePersistentDisk:
            pdName: demo-acme
            fsType: ext4
      containers:
      - name: traefik
        image: "traefik:1.6"
        volumeMounts:
          - mountPath: "/etc/traefik/config"
            name: config
          - mountPath: /etc/traefik/acme
            name: demo-acme
        args:
        - --configfile=/etc/traefik/config/traefik.toml
        - --api
        - --kubernetes
