scripts/gke/09_ingress_controller.yml
# expose Traefik Ingress
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-back
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.priority: "1"
spec:
  rules:
  - host: traefik-gke-demo.zenika.com
    http:
      paths:
      - path: /api
        backend:
          serviceName: back-service
          servicePort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-front
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.priority: "2"
spec:
  rules:
  - host: traefik-gke-demo.zenika.com
    http:
      paths:
      - path: /
        backend:
          serviceName: front-service
          servicePort: 80
